--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 							<div class="container">
 								<nav class="about__header">
 									<ul class="about__list">
-										<li><a href="" class="about__link active">HOME</a></li>
-										<li><a href="" class="about__link">ABOUT US</a></li>
-										<li><a href="" class="about__link">PORTFOLIO</a></li>
-										<li><a href="" class="about__link">CONTACT</a></li>
+										<li><a href="#" class="about__link active goto">HOME</a></li>
+										<li><a href="#about__body" class="about__link goto">ABOUT US</a></li>
+										<li><a href="#portfolio" class="about__link goto">PORTFOLIO</a></li>
+										<li><a href="#contacts" class="about__link goto">CONTACT</a></li>
 									</ul>
 								</nav>
 								<div class="about__body">
@@ -99,7 +99,7 @@
 							</div>
 						</div>
 
-						<div class="portfolio">
+						<div class="portfolio" >
 							<div class="container">
 								<div class="portfolio__top">
 									<div class="portfolio__block block">
